done with kids section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="adult.html">ADULT</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">KIDS </a></li>
+                  <li><a class="dropdown-item" href="kids.html">KIDS </a></li>
                   <hr>
                   <li><a class="dropdown-item" href="#">FAMILY</a></li>
                   <hr>
@@ -100,13 +100,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/bat-1920x598.jpg" class="d-block w-100" alt="..." height="600px">
+      <img src="img/bat-1920x598.jpg" class="d-block w-100 img" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/unc-1920x598.jpg" class="d-block w-100" alt="..." height="600px">
+      <img src="img/unc-1920x598.jpg" class="d-block w-100 img" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/sonic-1920x598.jpg" class="d-block w-100" alt="..." height="600px">
+      <img src="img/sonic-1920x598.jpg" class="d-block w-100 img" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
