--- a/kids.html
+++ b/kids.html
@@ -56,7 +56,7 @@
                             <hr>
                             <li><a class="dropdown-item" href="kids.html">KIDS </a></li>
                             <hr>
-                            <li><a class="dropdown-item" href="#">FAMILY</a></li>
+                            <li><a class="dropdown-item" href="family.html">FAMILY</a></li>
                             <hr>
                             <li><a class="dropdown-item" href="#">FANTASY/SUPERHERO</a></li>
                         </ul>
