--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="img/th.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="img/th.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top" font-size="xx-large">
               <strong><b>  MKODcinemas  </b></strong>
               </a>
           <a class="navbar-brand" href="#"></a>
@@ -59,13 +59,13 @@
                  <b> NOW SHOWING</b>
                 </a>
                 <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">BATMAN</a></li>
+                  <li><a class="dropdown-item" href="family.html#batman">BATMAN</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">MAMA BIG STICK</a></li>
+                  <li><a class="dropdown-item" href="kids.html#red">TURNING RED</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">UNCHARTED</a></li>
+                  <li><a class="dropdown-item" href="family.html#uncharted">UNCHARTED</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">SONIC THE HEDGEHOG</a></li>
+                  <li><a class="dropdown-item" href="kids.html#sonic">SONIC THE HEDGEHOG</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -73,7 +73,7 @@
                 <b>  MOVIE CATEGORY</b>
                 </a>
                 <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="adult.html">ADULT</a></li>
+                  <li><a class="dropdown-item" href="adult.html">ADULT & TEENS</a></li>
                   <hr>
                   <li><a class="dropdown-item" href="kids.html">KIDS </a></li>
                   <hr>
