--- a/kids.html
+++ b/kids.html
@@ -17,62 +17,58 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="img/th.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                <strong><b> MKODcinemas </b></strong>
-            </a>
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html"><b>HOME</b></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <b> NOW SHOWING</b>
-                        </a>
-                        <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">BATMAN</a></li>
-                            <hr>
-                            <li><a class="dropdown-item" href="#">MAMA BIG STICK</a></li>
-                            <hr>
-                            <li><a class="dropdown-item" href="#">UNCHARTED</a></li>
-                            <hr>
-                            <li><a class="dropdown-item" href="#">SONIC THE HEDGEHOG</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <b> MOVIE CATEGORY</b>
-                        </a>
-                        <ul class="dropdown-menu  dropdown-menu-dark active" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="adult.html">ADULT</a></li>
-                            <hr>
-                            <li><a class="dropdown-item" href="kids.html">KIDS </a></li>
-                            <hr>
-                            <li><a class="dropdown-item" href="family.html">FAMILY</a></li>
-                            <hr>
-                            <li><a class="dropdown-item" href="#">FANTASY/SUPERHERO</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#"><b>ABOUT US</b></a>
-                    </li>
-
+                <img src="img/th.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top" font-size="xx-large">
+              <strong><b>  MKODcinemas  </b></strong>
+              </a>
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="index.html"><b>HOME</b></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 <b> NOW SHOWING</b>
+                </a>
+                <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="family.html#batman">BATMAN</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="kids.html#red">TURNING RED</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="family.html#uncharted">UNCHARTED</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="kids.html#sonic">SONIC THE HEDGEHOG</a></li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+              </li>
+              <li class="nav-item dropdown active">
+                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <b>  MOVIE CATEGORY</b>
+                </a>
+                <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="adult.html">ADULT & TEENS</a></li>
+                  <hr>
+                  <li><a class="dropdown-item active" href="kids.html">KIDS </a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="family.html">FAMILY</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">FANTASY/SUPERHERO</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="#"><b>ABOUT US</b></a>
+              </li>
+             
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
         </div>
-    </nav>
+      </nav>
     <div class="row">
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <br><br>
@@ -107,7 +103,7 @@
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <br><br>
             <p>
-                <div class="card" style="width: 18rem;">
+                <div class="card" id="sonic" style="width: 18rem;">
                     <img src="img/sonic_the_hedgehogpost-240x412.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">SONIC THE HEDGEHOG</h5>
@@ -141,7 +137,7 @@
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <br><br>
             <p>
-                <div class="card" style="width: 18rem;">
+                <div class="card" id="red" style="width: 18rem;">
                     <img src="img/turning_redpost-240x412.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">TURNING RED</h5>
