done with adult and kids form

--- a/kidTicket.html
+++ b/kidTicket.html
@@ -90,14 +90,10 @@
                 <h3>Please select a movie</h3>
                 <select class="form-select" aria-label="Default select example" id="movie">
                     <option value="No Movie Selected">Movie Name</option>
-                    <option value="A BLOOD COVENANT">A BLOOD COVENANT</option>
-                    <option value="CITY HUSTLERS">CITY HUSTLERS</option>
-                    <option value="FANTASTIC BEASTS">FANTASTIC BEASTS</option>
-                    <option value="I AM NAZZY">I AM NAZZY</option>
-                    <option value="KING OF THIEVES">KING OF THIEVES</option>
-                    <option value="SK.G.F: CHAPTER 2">SK.G.F: CHAPTER 2</option>
-                    <option value="A SIMPLE LIE">A SIMPLE LIE</option>
-                    <option value="GALAMSEY">GALAMSEY</option>
+                    <option value="SONIC THE HEDGEHOG">SONIC THE HEDGEHOG</option>
+                    <option value="TURNING RED">TURNING RED</option>
+                    <option value="THE BAD GUYS">THE BAD GUYS</option>
+                    
                 </select>
             </div>
 
