--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"><b>HOME</b></a>
+                <a class="nav-link active lol" aria-current="page" href="index.html" style="color: white;"><b>HOME</b></a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"  style="color: white;">
                  <b> NOW SHOWING</b>
                 </a>
                 <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
@@ -69,7 +69,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"  style="color: white;">
                 <b>  MOVIE CATEGORY</b>
                 </a>
                 <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
@@ -83,7 +83,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#"><b>ABOUT US</b></a>
+                <a class="nav-link " aria-current="page" href="#"  style="color: white;"><b>ABOUT US</b></a>
               </li>
              
             </ul>
