done with about us

--- a/family.html
+++ b/family.html
@@ -17,58 +17,64 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="img/th.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top" font-size="xx-large">
-              <strong><b>  MKODcinemas  </b></strong>
-              </a>
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="index.html"  style="color: white;"><b>HOME</b></a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"  style="color: white;">
-                 <b> NOW SHOWING</b>
-                </a>
-                <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="family.html#batman">BATMAN</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="kids.html#red">TURNING RED</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="family.html#uncharted">UNCHARTED</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="kids.html#sonic">SONIC THE HEDGEHOG</a></li>
+                <img src="img/th.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top"
+                    font-size="xx-large">
+                <strong><b> MKODcinemas </b></strong>
+            </a>
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="index.html" style="color: white;"><b>HOME</b></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+                            <b> NOW SHOWING</b>
+                        </a>
+                        <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="family.html#batman">BATMAN</a></li>
+                            <hr>
+                            <li><a class="dropdown-item" href="kids.html#red">TURNING RED</a></li>
+                            <hr>
+                            <li><a class="dropdown-item" href="family.html#uncharted">UNCHARTED</a></li>
+                            <hr>
+                            <li><a class="dropdown-item" href="kids.html#sonic">SONIC THE HEDGEHOG</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+                            <b> MOVIE CATEGORY</b>
+                        </a>
+                        <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="adult.html">ADULT & TEENS</a></li>
+                            <hr>
+                            <li><a class="dropdown-item" href="kids.html">KIDS </a></li>
+                            <hr>
+                            <li><a class="dropdown-item active" href="family.html">FAMILY</a></li>
+                            <hr>
+                            <li><a class="dropdown-item" href="#">FANTASY/SUPERHERO</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="about.html" style="color: white;"><b>ABOUT
+                                US</b></a>
+                    </li>
+
                 </ul>
-              </li>
-              <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"  style="color: white;">
-                <b>  MOVIE CATEGORY</b>
-                </a>
-                <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="adult.html">ADULT & TEENS</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="kids.html">KIDS </a></li>
-                  <hr>
-                  <li><a class="dropdown-item active" href="family.html">FAMILY</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="#">FANTASY/SUPERHERO</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#"  style="color: white;"><b>ABOUT US</b></a>
-              </li>
-             
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
-      </nav>
+    </nav>
     <div class="row">
 
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
@@ -86,7 +92,7 @@
                         <br> <b>Genre:</b> Action, Crime, Drama, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="#" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -100,7 +106,7 @@
             <div class="card" style="width: 18rem;">
                 <img src="img/contractorpost-240x412.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">THE BATMAN</h5>
+                    <h5 class="card-title">THE CONTRACTOR</h5>
                     <p class="card-text">After being involuntarily discharged from the U.S. Special Forces, James Harper
                         (Pine) decides to support his family by joining a private contracting organization alongside his
                         best friend (Foster) and under the command of a fellow veteran (Sutherland). Overseas on a
@@ -111,7 +117,7 @@
                         <br> <b>Genre:</b> Action, Now Showing, Slider, Thriller
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="#" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -138,7 +144,7 @@
                         <br> <b>Genre:</b> Adventure, Family, Fantasy, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="#" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -159,12 +165,13 @@
                     <p class="card-text">Dangerously ill with a rare blood disorder, and determined to save others
                         suffering his same fate, Dr. Morbius attempts a desperate gamble. What at first appears to be a
                         radical success soon reveals itself to be a remedy potentially worse than the disease.
-                        <br> <b>Actors:</b>  Adria Arjona, Archie Renaux, Charlie Shotwell, Corey Johnson, Jared Harris, Jared Leto, Matt Smith, Michael Keaton, Tyrese Gibson
-                        <br> <b>Director:</b>  Daniel Espinosa
+                        <br> <b>Actors:</b> Adria Arjona, Archie Renaux, Charlie Shotwell, Corey Johnson, Jared Harris,
+                        Jared Leto, Matt Smith, Michael Keaton, Tyrese Gibson
+                        <br> <b>Director:</b> Daniel Espinosa
                         <br> <b>Genre:</b> Action, Adventure, Drama, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="#" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -197,7 +204,7 @@
                         <br> <b>Genre:</b> Drama, Now Showing, Romance
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="#" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -215,14 +222,16 @@
                 <img src="img/unchartedPOST-240x412.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">UNCHARTED</h5>
-                    <p class="card-text">The story is a prequel to the games, starring Holland as a younger Drake, showing us details of how he came to meet and befriend Sully.
+                    <p class="card-text">The story is a prequel to the games, starring Holland as a younger Drake,
+                        showing us details of how he came to meet and befriend Sully.
 
-                        <br> <b>Actors:</b> Antonio Banderas, Mark Wahlberg, Patricia Meeden, Sarah Petrick, Sophia Ali, Tati Gabrielle, Tom Holland
+                        <br> <b>Actors:</b> Antonio Banderas, Mark Wahlberg, Patricia Meeden, Sarah Petrick, Sophia Ali,
+                        Tati Gabrielle, Tom Holland
                         <br> <b>Director:</b> Ruben Fleischer
-                        <br> <b>Genre:</b>  Action, Adventure, Now Showing, Slider
+                        <br> <b>Genre:</b> Action, Adventure, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="#" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -260,3 +269,5 @@
 
     </div>
 </body>
+
+</html>
