--- a/familyForm.html
+++ b/familyForm.html
@@ -30,11 +30,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="index.html"><b>HOME</b></a>
+                        <a class="nav-link " aria-current="page" href="index.html"  style="color: white;"><b>HOME</b></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+                            data-bs-toggle="dropdown" aria-expanded="false"  style="color: white;">
                             <b> NOW SHOWING</b>
                         </a>
                         <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+                            data-bs-toggle="dropdown" aria-expanded="false"  style="color: white;">
                             <b> MOVIE CATEGORY</b>
                         </a>
                         <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
@@ -63,8 +63,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="about.html" style="color: white;"><b>ABOUT
-                                US</b></a>
+                        <a class="nav-link " aria-current="page" href="about.html"  style="color: white;"><b>ABOUT US</b></a>
                     </li>
 
                 </ul>
@@ -82,26 +81,25 @@
             <span class="input-group-text" id="inputGroupPrepend3">@</span>
             <input type="text" class="form-control is-invalid" id="validationServerUsername username"
                 aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-            <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                <div class="valid-feedback">
+                    Looks good!
+                  </div>
+                <div id="validationServerUsernameFeedback" class="invalid-feedback">
                 Please choose a username.
             </div>
         </div>
         <label for="validationServer03" class="form-label">Password</label>
         <input type="password" class="form-control is-invalid" id="validationServer03 password"
             aria-describedby="validationServer03Feedback" required>
-        <div class="valid-feedback">
-            Looks good!
-        </div>
-        <div id="validationServer03Feedback" class="invalid-feedback">
+            <div class="valid-feedback">
+                Looks good!
+              </div>
+            <div id="validationServer03Feedback" class="invalid-feedback">
             Please provide a password.
         </div>
-        <br><br>
-        <div class="row button">
+      <br><br>  <div class="row button">
             <div class="col-md-6 col-sm-6">
-                <a href="adultTicket.html" class="btn btn-success">SIGN IN</a>
+               <a href="familyTicket.html" class="btn btn-success">SIGN IN</a>
             </div>
             <div class="col-md-6 col-sm-6">
                 <button type="reset" value="reset" class="btn btnreset btn-danger"
@@ -111,5 +109,4 @@
         </div>
     </form>
 </body>
-
 </html>
