--- a/familyTicket.html
+++ b/familyTicket.html
@@ -81,9 +81,9 @@
 
 
     <u><b>
-            <h1 class="adult-ticket">KIDS Ticketing</h1>
+            <h1 class="adult-ticket">FAMILY Ticketing</h1>
         </b></u>
-
+<br>
     <form id="adult-teen">
 
         <div class="row">
@@ -91,9 +91,12 @@
                 <h3>Please select a movie</h3>
                 <select class="form-select" aria-label="Default select example" id="movie">
                     <option value="No Movie Selected">Movie Name</option>
-                    <option value="SONIC THE HEDGEHOG">SONIC THE HEDGEHOG</option>
-                    <option value="TURNING RED">TURNING RED</option>
-                    <option value="THE BAD GUYS">THE BAD GUYS</option>
+                    <option value="SONIC THE HEDGEHOG">THE BATMAN</option>
+                    <option value="TURNING RED">THE CONTRACTOR</option>
+                    <option value="THE BAD GUYS">FANTASTIC BEASTS</option>
+                    <option value="SONIC THE HEDGEHOG">MORBIUS</option>
+                    <option value="TURNING RED">A HAPPY SURPRISE</option>
+                    <option value="THE BAD GUYS">UNCHARTED</option>
 
                 </select>
             </div>
