page fully functioning

--- a/adult.html
+++ b/adult.html
@@ -97,7 +97,7 @@
                         <br> <b>Genre:</b> Drama, Nollywood, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
                         <br> <b>Genre:</b> Comedy, Drama, Nollywood, Now Showing
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                         <br> <b>Genre:</b> Adventure, Family, Fantasy, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -175,7 +175,7 @@
                         <br> <b>Genre:</b> Comedy, Drama, Nollywood, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
             </p>
@@ -200,7 +200,7 @@
                         <br> <b>Genre:</b> Drama, Nollywood, Now Showing, Slider
                         <br> <b>Language:</b> English/Yoruba
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -226,7 +226,7 @@
                         <br> <b>Genre:</b> Action, Drama, Hindi, Nollywood, Now Showing, Slider
                         <br> <b>Language:</b> Hindi
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -248,7 +248,7 @@
                         <br> <b>Genre:</b> , Drama, Comedy, Nollywood, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -273,7 +273,7 @@
                         <br> <b>Genre:</b> , Drama, Adventure, Nollywood, Now Showing, Slider
                         <br> <b>Language:</b> English, Twi
                     </p>
-                    <a href="adultForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="adultTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
