corrected vital errors

--- a/family.html
+++ b/family.html
@@ -92,7 +92,7 @@
                         <br> <b>Genre:</b> Action, Crime, Drama, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
                         <br> <b>Genre:</b> Action, Now Showing, Slider, Thriller
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -144,7 +144,7 @@
                         <br> <b>Genre:</b> Adventure, Family, Fantasy, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -171,7 +171,7 @@
                         <br> <b>Genre:</b> Action, Adventure, Drama, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -204,7 +204,7 @@
                         <br> <b>Genre:</b> Drama, Now Showing, Romance
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -231,7 +231,7 @@
                         <br> <b>Genre:</b> Action, Adventure, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="familyForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="familyTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
