--- a/kids.html
+++ b/kids.html
@@ -95,7 +95,7 @@
                         <br> <b>Genre:</b> Adventure, Animation, Comedy, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="kidForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="kidTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
             </p>
@@ -127,7 +127,7 @@
                         <br> <b>Genre:</b> Action, Adventure, Animation, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="kidForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="kidTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
@@ -163,7 +163,7 @@
                         <br> <b>Genre:</b> Adventure, Animation, Comedy, Now Showing, Slider
                         <br> <b>Language:</b> English
                     </p>
-                    <a href="kidForm.html" class="btn btn-secondary">BOOK TICKET</a>
+                    <a href="kidTicket.html" class="btn btn-secondary">BOOK TICKET</a>
                 </div>
             </div>
 
